Adding assets, first day changes

--- a/index.html
+++ b/index.html
@@ -5,16 +5,143 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/aaa489a575.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
     <header>
-      <nav>          
+      <nav id="navigation">
+        <div id="leftnav">
+          <div id="logo">
+            <img id="logo" src="assets/logo.svg" alt="Company logo">
+          </div>
+        </div>
+        <div id="rightnav">
+          <div id="menu">
+            <div>Features</div>
+            <div>About</div>
+            <div>Launch</div>
+            <div>Sign Up</div>
+          </div>
+          <div id="hamburger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
+        </div>
       </nav>
     </header>
-    <section>
+    <section id="section1">
+      <div id="container1">
+        <div id="left1">
+          <p id="launch" class="pink">LAUNCHING SOON</p>
+          <p class="title1">An NFT like</p>
+          <p class="title2">no other</p>
+          <p class="smalltext">Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
+          <button type="button"  value="Sign Up" class="button">Sign Up</button>
+        </div>
+        <div id="right1">
+          <img id="graphic" src="assets/graphic.svg" alt="Pink figure">
+        </div>
+      </div>
+      <div id="container2">
+        <div id="background">
+          <p class="bigtext">Free NFT for early birds</p>
+          <p class="smalltext2">Sign up today and you'll get a free NFT when we launch.</p>
+        </div>
+      </div>
+      <div id="container3">
+        <img class="company" src="assets/companies/1.svg" alt="Company logo">
+        <img class="company" src="assets/companies/2.svg" alt="Company logo">
+        <img class="company" src="assets/companies/3.svg" alt="Company logo">
+        <img class="company" src="assets/companies/4.svg" alt="Company logo">
+        <img class="company" src="assets/companies/5.svg" alt="Company logo">
+      </div>
+      <div id="container4">
+        <p class="bigtext">LE Super Rare Auction</p>
+        <p class="smalltext">We have released four limited edition NFTs early which can be bid on via <span><a href="#" class="link">OpenSea</a>.</span></p>
+        <div id="cardblock">
+          <div class="card">
+            <img src="assets/ntfs/ntf-1.svg">
+            <div class="firstcardline">
+              <p class="orange">GLOOP SERIES</p>
+              <p class="topbid">TOP BID</p>
+            </div>
+            <div class="secondcardline">
+              <p class="cardname">Purple Man</p>
+              <div class="iconprice">
+                <img src="assets/eth.svg">
+                <p class="price">2.99 ETH</p>
+              </div>
+            </div>
+            <div class="thirdcardline">
+              <p class="cardnumberandday">#12983</p>
+              <p class="cardnumberandday">1 day left</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="assets/ntfs/ntf-2.svg">
+            <div class="firstcardline">
+              <p class="orange">GLOOP SERIES</p>
+              <p class="topbid">TOP BID</p>
+            </div>
+            <div class="secondcardline">
+              <p class="cardname">Purple Man</p>
+              <div class="iconprice">
+                <img src="assets/eth.svg">
+                <p class="price">2.99 ETH</p>
+              </div>
+            </div>
+            <div class="thirdcardline">
+              <p class="cardnumberandday">#12983</p>
+              <p class="cardnumberandday">1 day left</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="assets/ntfs/ntf-3.svg">
+            <div class="firstcardline">
+              <p class="orange">GLOOP SERIES</p>
+              <p class="topbid">TOP BID</p>
+            </div>
+            <div class="secondcardline">
+              <p class="cardname">Purple Man</p>
+              <div class="iconprice">
+                <img src="assets/eth.svg">
+                <p class="price">2.99 ETH</p>
+              </div>
+            </div>
+            <div class="thirdcardline">
+              <p class="cardnumberandday">#12983</p>
+              <p class="cardnumberandday">1 day left</p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="assets/ntfs/ntf-4.svg">
+            <div class="firstcardline">
+              <p class="orange">GLOOP SERIES</p>
+              <p class="topbid">TOP BID</p>
+            </div>
+            <div class="secondcardline">
+              <p class="cardname">Purple Man</p>
+              <div class="iconprice">
+                <img src="assets/eth.svg">
+                <p class="price">2.99 ETH</p>
+              </div>
+            </div>
+            <div class="thirdcardline">
+              <p class="cardnumberandday">#12983</p>
+              <p class="cardnumberandday">1 day left</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+
+
+
     <footer>
     </footer>
   </body>
