Second day changes

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
     </header>
     <section id="section1">
       <div id="container1">
-        <div id="left1">
+        <div class="left1">
           <p id="launch" class="pink">LAUNCHING SOON</p>
           <p class="title1">An NFT like</p>
           <p class="title2">no other</p>
           <p class="smalltext">Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
           <button type="button"  value="Sign Up" class="button">Sign Up</button>
         </div>
-        <div id="right1">
-          <img id="graphic" src="assets/graphic.svg" alt="Pink figure">
+        <div class="right1">
+          <img class="graphic" id="first_graphic" src="assets/graphic.svg" alt="Pink figure">
         </div>
       </div>
       <div id="container2">
@@ -138,11 +138,69 @@
           </div>
         </div>
       </div>
+      <div id="container5">
+        <div class="left1" id="left3">
+          <p id="launch" class="pink">LAUNCHING SOON</p>
+          <p class="title1">An NFT like no other</p>
+          <p class="smalltext" id="title3">Don't miss out on the release of our new NFT. Sign up below to receive updates.</p>
+          <button type="button"  value="Sign Up" class="button" id="second_button">Sign Up</button>
+        </div>
+        <div class="right1">
+          <img class="graphic" id="second_graphic" src="assets/upsell-footer-image.svg" alt="Pink figure">
+        </div>
+      </div>
     </section>
 
 
 
     <footer>
+
+
+          <div class="logo">
+            <img id="logo" src="assets/logo.svg" alt="Company logo">
+          </div>
+          <p class="footertext">Exclusive NFT Collection</p>
+          <div class="social">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-tiktok"></i>
+          </div>
+          <table>
+            <tr>
+              <th>ABOUT</th>
+              <th>NFT</th>
+            </tr>
+            <tr>
+              <td>About</td>
+              <td>OpenSea</td>
+            </tr>
+            <tr>
+              <td>Terms</td>
+              <td>Maker</td>
+            </tr>
+            <tr>
+              <td>Legal</td>
+              <td>Learn</td>
+            </tr>
+            <tr>
+              <th>CONTACT</th>
+              <th>SOCIAL</th>
+            </tr>
+            <tr>
+              <td>Press</td>
+              <td>Twitter</td>
+            </tr>
+            <tr>
+              <td>Support</td>
+              <td>Instagram</td>
+            </tr>
+          </table>
+          <div class="copyright">© Copyright 2022 NFTlanding</div>
+
+        
+
+
     </footer>
   </body>
 </html>
