Finished mobile layout, minified css and index.html

--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
 
   <body>
     <header>
-      <nav id="navigation">
-        <div id="leftnav">
-          <div id="logo">
-            <img id="logo" src="assets/logo.svg" alt="Company logo">
-          </div>
+      <nav>
+        <div>
+            <img class="logo" src="assets/logo.svg" alt="Company logo">
         </div>
-        <div id="rightnav">
+        <div id="align_hamburger">
           <div id="menu">
             <div>Features</div>
             <div>About</div>
@@ -34,33 +32,32 @@
         </div>
       </nav>
     </header>
-    <section id="section1">
-      <div id="container1">
-        <div class="left1">
-          <p id="launch" class="pink">LAUNCHING SOON</p>
-          <p class="title1">An NFT like</p>
-          <p class="title2">no other</p>
+    <section>
+      <div class="container">
+        <div>
+          <p class="pink">LAUNCHING SOON</p>
+          <p class="title">An NFT like no other</p>
           <p class="smalltext">Don't miss out on the release of our new NFT. Sign up below to receive updates when we go live.</p>
           <button type="button"  value="Sign Up" class="button">Sign Up</button>
         </div>
-        <div class="right1">
-          <img class="graphic" id="first_graphic" src="assets/graphic.svg" alt="Pink figure">
+        <div>
+          <img id="first_graphic" src="assets/graphic.svg" alt="Pink figure">
         </div>
       </div>
-      <div id="container2">
+      <div class="background_container">
         <div id="background">
           <p class="bigtext">Free NFT for early birds</p>
-          <p class="smalltext2">Sign up today and you'll get a free NFT when we launch.</p>
+          <p class="smalltext black">Sign up today and you'll get a free NFT when we launch.</p>
         </div>
       </div>
-      <div id="container3">
-        <img class="company" src="assets/companies/1.svg" alt="Company logo">
+      <div class="container companyset">
+        <img class="company cutimg" src="assets/companies/1.svg" alt="Company logo">
         <img class="company" src="assets/companies/2.svg" alt="Company logo">
         <img class="company" src="assets/companies/3.svg" alt="Company logo">
-        <img class="company" src="assets/companies/4.svg" alt="Company logo">
+        <img class="company hidden" src="assets/companies/4.svg" alt="Company logo">
         <img class="company" src="assets/companies/5.svg" alt="Company logo">
       </div>
-      <div id="container4">
+      <div class="container column">
         <p class="bigtext">LE Super Rare Auction</p>
         <p class="smalltext">We have released four limited edition NFTs early which can be bid on via <span><a href="#" class="link">OpenSea</a>.</span></p>
         <div id="cardblock">
@@ -73,13 +70,13 @@
             <div class="secondcardline">
               <p class="cardname">Purple Man</p>
               <div class="iconprice">
-                <img src="assets/eth.svg">
+                <img class="nfticon" src="assets/eth.svg">
                 <p class="price">2.99 ETH</p>
               </div>
             </div>
             <div class="thirdcardline">
-              <p class="cardnumberandday">#12983</p>
-              <p class="cardnumberandday">1 day left</p>
+              <p>#12983</p>
+              <p>1 day left</p>
             </div>
           </div>
           <div class="card">
@@ -91,13 +88,13 @@
             <div class="secondcardline">
               <p class="cardname">Purple Man</p>
               <div class="iconprice">
-                <img src="assets/eth.svg">
+                <img class="nfticon" src="assets/eth.svg">
                 <p class="price">2.99 ETH</p>
               </div>
             </div>
             <div class="thirdcardline">
-              <p class="cardnumberandday">#12983</p>
-              <p class="cardnumberandday">1 day left</p>
+              <p>#12983</p>
+              <p>1 day left</p>
             </div>
           </div>
           <div class="card">
@@ -109,13 +106,13 @@
             <div class="secondcardline">
               <p class="cardname">Purple Man</p>
               <div class="iconprice">
-                <img src="assets/eth.svg">
+                <img class="nfticon" src="assets/eth.svg">
                 <p class="price">2.99 ETH</p>
               </div>
             </div>
             <div class="thirdcardline">
-              <p class="cardnumberandday">#12983</p>
-              <p class="cardnumberandday">1 day left</p>
+              <p>#12983</p>
+              <p>1 day left</p>
             </div>
           </div>
           <div class="card">
@@ -127,37 +124,34 @@
             <div class="secondcardline">
               <p class="cardname">Purple Man</p>
               <div class="iconprice">
-                <img src="assets/eth.svg">
+                <img class="nfticon" src="assets/eth.svg">
                 <p class="price">2.99 ETH</p>
-              </div>
+              </div>file:///Users/minderismac/Downloads/test/assets/upsell-footer-image.svg
             </div>
             <div class="thirdcardline">
-              <p class="cardnumberandday">#12983</p>
-              <p class="cardnumberandday">1 day left</p>
+              <p>#12983</p>
+              <p>1 day left</p>
             </div>
           </div>
         </div>
       </div>
-      <div id="container5">
-        <div class="left1" id="left3">
-          <p id="launch" class="pink">LAUNCHING SOON</p>
-          <p class="title1">An NFT like no other</p>
-          <p class="smalltext" id="title3">Don't miss out on the release of our new NFT. Sign up below to receive updates.</p>
+      <div class="container greyborder">
+        <div>
+          <p class="pink">LAUNCHING SOON</p>
+          <p class="title bigger">An NFT like no other</p>
+          <div class="greyline"></div>
+          <p class="smalltext smallerbox">Don't miss out on the release of our new NFT. Sign up below to receive updates.</p>
           <button type="button"  value="Sign Up" class="button" id="second_button">Sign Up</button>
         </div>
-        <div class="right1">
-          <img class="graphic" id="second_graphic" src="assets/upsell-footer-image.svg" alt="Pink figure">
+        <div>
+          <img id="second_graphic" src="assets/upsell-footer-image.svg" alt="Pink figure">
         </div>
       </div>
     </section>
-
-
-
     <footer>
-
-
-          <div class="logo">
-            <img id="logo" src="assets/logo.svg" alt="Company logo">
+        <div class="column">
+          <div>
+            <img class="logo" src="assets/logo.svg" alt="Company logo">
           </div>
           <p class="footertext">Exclusive NFT Collection</p>
           <div class="social">
@@ -166,37 +160,34 @@
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-tiktok"></i>
           </div>
-          <table>
-            <tr>
-              <th>ABOUT</th>
-              <th>NFT</th>
-            </tr>
-            <tr>
-              <td>About</td>
-              <td>OpenSea</td>
-            </tr>
-            <tr>
-              <td>Terms</td>
-              <td>Maker</td>
-            </tr>
-            <tr>
-              <td>Legal</td>
-              <td>Learn</td>
-            </tr>
-            <tr>
-              <th>CONTACT</th>
-              <th>SOCIAL</th>
-            </tr>
-            <tr>
-              <td>Press</td>
-              <td>Twitter</td>
-            </tr>
-            <tr>
-              <td>Support</td>
-              <td>Instagram</td>
-            </tr>
-          </table>
-          <div class="copyright">© Copyright 2022 NFTlanding</div>
+        </div>
+
+        <div class="footer_container">
+          <div class="footersection">
+              <p class="bold">ABOUT</p>
+              <p>About</p>
+              <p>Terms</p>
+              <p>Legal</p>
+          </div>
+          <div class="footersection">
+              <p class="bold">NFT</p>
+              <p>OpenSea</p>
+              <p>Maker</p>
+              <p>Learn</p>
+          </div>
+          <div class="footersection">
+              <p class="bold">CONTACT</p>
+              <p>Press</p>
+              <p>Support</p>
+          </div>
+          <div class="footersection">
+              <p class="bold">SOCIAL</p>
+              <p>Twitter</p>
+              <p>Instagram</p>   
+          </div>  
+        </div>
+        <div class="copyright hidden">Launching August 2022</div>
+        <div class="copyright">© Copyright 2022 NFTlanding</div>
 
         
 
